--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Usagi/vendor/spdlog"]
 	path = Usagi/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Usagi/vendor/GLFW"]
+	path = Usagi/vendor/GLFW
+	url = https://github.com/TheCherno/glfw
