--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Usagi/vendor/imgui"]
 	path = Usagi/vendor/imgui
 	url = https://github.com/nuisancedm/imgui
+[submodule "Usagi/vendor/glm"]
+	path = Usagi/vendor/glm
+	url = https://github.com/g-truc/glm
