--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,22 +4,21 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2086,776
-ViewportId=0xE927CF2F
-Size=359,660
+Pos=0,19
+Size=213,701
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][DockSpace Demo]
-ViewportPos=1810,474
-ViewportId=0x4647B76E
-Size=359,698
+Pos=0,0
+Size=1280,720
 Collapsed=0
 
 [Window][Example: Log]
-ViewportPos=1228,799
-ViewportId=0xBF126D42
-Size=664,400
+Pos=217,485
+Size=1063,461
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Example: Console]
 ViewportPos=300,678
@@ -34,4 +33,9 @@ Size=485,414
 Collapsed=0
 
 [Docking][Data]
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=677,344 Size=1280,701 Split=Y
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1063,464 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=213,701 Selected=0xE87781F4
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1065,701 CentralNode=1
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1063,461 Selected=0xDBFE1153
 
