--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,13 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
+ViewportPos=788,525
+ViewportId=0xE927CF2F
 Size=213,701
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -32,10 +31,14 @@ ViewportId=0x3AC84485
 Size=485,414
 Collapsed=0
 
+[Window][Test]
+ViewportPos=752,399
+ViewportId=0x784DD132
+Size=115,86
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=677,344 Size=1280,701 Split=Y
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1063,464 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=213,701 Selected=0xE87781F4
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1065,701 CentralNode=1
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1063,461 Selected=0xDBFE1153
+DockSpace   ID=0x3BC79352 Pos=677,344 Size=1280,701 Split=Y
+  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=1063,464 CentralNode=1
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1063,461 Selected=0xDBFE1153
 
